First half of the different hour types config

--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
     <main class="ts-container">
       <?!= include('views/partials/dashboard'); ?>
       <?!= include('views/partials/contracts'); ?>
+      <?!= include('views/partials/hourtypes'); ?>
       <?!= include('views/partials/settings'); ?>
     </main>
     <?!= include('views/partials/scripts'); ?>
